/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.6.1/userguide/building_java_projects.html
 */

plugins {
    // Apply the java-library plugin for API and implementation separation.
    id 'java-library'
    id 'maven-publish'

    // Automated code checking and documentation generation.
    id 'jacoco'
    id 'com.diffplug.spotless' version '6.25.0'
    id 'checkstyle'
    id 'org.jetbrains.dokka' version '1.6.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    mavenLocal()
}

group = 'org.opencadc'
version = '1.2.0'
java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

description = 'OpenCADC Cookie and OIDC Access Token manager'
def git_url = 'https://github.com/opencadc/web.git'

// Minimal publishing required to run publishToMavenLocal with Gradle version >= 7
publishing {
    publications {
        maven(MavenPublication) {
            groupId = group
            version = version
            sourceCompatibility = sourceCompatibility

            from components.java
        }
    }
}

dependencies {
    api 'com.nimbusds:oauth2-oidc-sdk:11.31.1'

    implementation 'org.opencadc:cadc-registry:[1.7.4,2.0.0)'
    implementation 'org.opencadc:cadc-util:[1.12.14,2.0.0)'
    implementation 'org.apache.commons:commons-lang3:[3.11,4.0)'
    implementation 'redis.clients:jedis:[7.2.1,8.0.0)'

    // Use JUnit test framework.
    testImplementation 'junit:junit:[4.13.2, 5.0)'
}

spotless {
    java {
        // Interpret all files as utf-8
        encoding 'UTF-8'
        // Use the default importOrder configuration
        importOrder()
        // Remove unused imports
        removeUnusedImports()
        // Google Java Format, Android Open Source Project style which uses 4 spaces for indentation
        palantirJavaFormat('2.50.0').formatJavadoc(true)
        // Format annotations on a single line
        formatAnnotations()
    }
}
check.dependsOn spotlessCheck

// Example in a Gradle build script
afterEvaluate {
    def spotless = getProject().getExtensions().findByName("com.diffplug.spotless")
    if (spotless != null) {
        File gitFolder = file('.git') // Relative or absolute path
        if (gitFolder.exists()) {
            spotless.ratchetFrom('origin/main')
        } else {
            spotless.ratchetFrom(null) // No ratchet if .git folder does not exist
        }
    }
}

// Create Java Code Coverage Reports
jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
}
check.dependsOn jacocoTestReport

// Create JavaDoc
javadoc {
    destinationDir = file("${layout.buildDirectory}/docs/javadoc")
}

// Create Java Documentation using Dokka for Github Markdown and HTML
tasks.dokkaGfm.configure {
    outputDirectory.set(file("${layout.buildDirectory}/docs/dokka/gfm"))
    dokkaSourceSets {
        register("main") {
            sourceRoots.from(file("src/main/java"))
        }
    }
}
tasks.dokkaHtml.configure {
    outputDirectory.set(file("${layout.buildDirectory}/docs/dokka/html"))
    dokkaSourceSets {
        register("main") {
            sourceRoots.from(file("src/main/java"))
        }
        configureEach {
            jdkVersion.set(11)
            sourceLink {
                localDirectory.set(file("src/main/java"))
                remoteUrl.set("https://github.com/opencadc/web/tree/main/cadc-web-token/src/main/java")
            }
        }
    }
}